@@ -40,7 +40,6 @@ HOSTS:
 CONFIG:
   log_level: verbose
   type: aio
-  vagrant_memsize: 512
   ssh:
     keepalive: true
     keepalive_interval: 10
