@@ -1,3 +1,6 @@
+* Fri Jun 03 2022 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.2.0
+- Update from camptocamp/systemd to puppet/systemd
+
 * Tue Jul 06 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.1.0
 - Fixed
   - Added _netdev to the default mount options
